[SC-6126] added z-index to offers and offers-details overlay to avoid overlay overlapping on the header

--- a/src/personal-finance/shared/offers/offer-details/offer-details.component.less
+++ b/src/personal-finance/shared/offers/offer-details/offer-details.component.less
@@ -383,4 +383,8 @@
             }
         }
     }
+
+    /deep/ .blockOverlay {
+        z-index: 1 !important;
+    }
 }
