--- a/src/personal-finance/shared/offers/offers.component.less
+++ b/src/personal-finance/shared/offers/offers.component.less
@@ -436,4 +436,7 @@
         }
     }
 
+    /deep/ .blockOverlay {
+        z-index: 1 !important;
+    }
 }
